--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
     implementation 'mysql:mysql-connector-java:8.0.19'
+/*    implementation 'org.hibernate:hibernate-agroal:5.4.12.Final'*/
+    implementation 'org.hibernate:hibernate-core:5.4.12.Final'
 
 }
 
