--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -21,10 +21,9 @@ dependencies {
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
     implementation 'com.beust:jcommander:1.78'
     implementation 'com.thoughtworks.xstream:xstream:1.4.11.1'
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
     implementation 'mysql:mysql-connector-java:8.0.19'
-/*    implementation 'org.hibernate:hibernate-agroal:5.4.12.Final'*/
     implementation 'org.hibernate:hibernate-core:5.4.12.Final'
 
 }
@@ -42,6 +41,10 @@ task testGroups(type: Test) {
         systemProperty 'target', "${target}"
         //проброс настроек в запускаемую Java-машину
     }
+    if (project.hasProperty('verifyUI')) {
+        systemProperty 'verifyUI', "${verifyUI}"
+        //проброс настроек в запускаемую Java-машину
+    }
 }
 
 task testContacts(type: Test) {
@@ -54,6 +57,10 @@ task testContacts(type: Test) {
     }
     if (project.hasProperty('target')) {
         systemProperty 'target', "${target}"
+        //проброс настроек в запускаемую Java-машину
+    }
+    if (project.hasProperty('verifyUI')) {
+        systemProperty 'verifyUI', "${verifyUI}"
         //проброс настроек в запускаемую Java-машину
     }
 }
