--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -20,11 +20,11 @@ dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-4'
     implementation 'org.hamcrest:java-hamcrest:2.0.0.0'
 //    implementation 'com.beust:jcommander:1.78'
-//    implementation 'com.thoughtworks.xstream:xstream:1.4.11.1'
-//    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.thoughtworks.xstream:xstream:1.4.11.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 //    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
 //    implementation 'mysql:mysql-connector-java:8.0.19'
-//    implementation 'org.hibernate:hibernate-core:5.4.12.Final'
+    implementation 'org.hibernate:hibernate-core:5.4.12.Final'
     implementation 'org.apache.httpcomponents:httpclient:4.5.12'
     implementation 'commons-net:commons-net:3.6'
     implementation 'org.subethamail:subethasmtp:3.1.7'
