--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 //    implementation 'com.beust:jcommander:1.78'
     implementation 'com.thoughtworks.xstream:xstream:1.4.11.1'
     implementation 'com.google.code.gson:gson:2.8.6'
-//    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
     implementation 'mysql:mysql-connector-java:8.0.19'
     implementation 'org.hibernate:hibernate-core:5.4.12.Final'
     implementation 'org.apache.httpcomponents:httpclient:4.5.12'
