--- a/mantis-tests/build.gradle
+++ b/mantis-tests/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 }
 
 
-test {
+task testMantis (type: Test) {
     useTestNG() {
         suites 'src/test/resources/testing.xml'
     }
