--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -15,6 +15,10 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    agent
+}
+
 dependencies {
     implementation 'org.testng:testng:7.1.0'
     implementation 'org.seleniumhq.selenium:selenium-java:4.0.0-alpha-4'
@@ -25,9 +29,10 @@ dependencies {
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha5'
     implementation 'mysql:mysql-connector-java:8.0.19'
     implementation 'org.hibernate:hibernate-core:5.4.12.Final'
+    agent "org.aspectj:aspectjweaver:1.8.0"
+    compile "ru.yandex.qatools.allure:allure-testng-adaptor:1.4.0.RC4"
 
 }
-
 
 task testGroups(type: Test) {
     useTestNG() {
@@ -51,6 +56,10 @@ task testGroups(type: Test) {
     }
 }
 
+testGroups.doFirst {
+    jvmArgs "-javaagent:${configurations.agent.singleFile}"
+}
+
 task testContacts(type: Test) {
     useTestNG() {
         suites 'src/test/resources/testng-contacts.xml'
@@ -70,6 +79,10 @@ task testContacts(type: Test) {
     if (project.hasProperty('verifyUI')) {
         systemProperty 'verifyUI', "${verifyUI}"
         //проброс настроек в запускаемую Java-машину
+    }
+
+    testContacts.doFirst {
+        jvmArgs "-javaagent:${configurations.agent.singleFile}"
     }
 }
 
