--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'org.hibernate:hibernate-core:5.4.12.Final'
     agent "org.aspectj:aspectjweaver:1.8.0"
     compile "ru.yandex.qatools.allure:allure-testng-adaptor:1.4.0.RC4"
+    implementation 'org.robotframework:robotframework:3.1.2'
 
 }
 
@@ -84,6 +85,13 @@ task testContacts(type: Test) {
     testContacts.doFirst {
         jvmArgs "-javaagent:${configurations.agent.singleFile}"
     }
+}
+
+task rf(type: JavaExec) {
+    main = 'org.robotframework.RobotFramework'
+    classpath = sourceSets.test.runtimeClasspath
+    args '--outputdir', 'build/rf-report'
+    args 'src/test/resources/rf'
 }
 
 
